# ls_tool

./: Cargo.toml
src/: args.rs  formatting.rs  lib.rs  main.rs  util.rs  windows_util.rs
tests/: integration_test.rs
