[package]
name = "ls_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
chrono = "0.4.44"
terminal_size = "0.4.3"
is-terminal = "0.4"
tempfile = "3.27.0"
windows-permissions = "0.2.4"
windows-acl = "0.3.0"
filesize = "0.2.0"
file-id = "0.2.3"
# "kernel" adds safe wrappers for kernel32 fns (GetCompressedFileSize, HFILE, etc.)
# "advapi" / "shell" cover the security / SID helpers used transitively
winsafe = { version = "0.0.27", features = ["advapi", "shell", "kernel"] }